--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
     "configurations": [
         {
             "type": "java",
-            "name": "CodeLens (Launch) - ListDL",
+            "name": "CodeLens (Launch) - ListDLmain",
             "request": "launch",
-            "mainClass": "ListDL",
+            "mainClass": "ListDLmain",
             "projectName": "Data-Structures-and-Algorithms-Laboratory_d3e35150"
         },
         {
