--- a/ex5/.vscode/launch.json
+++ b/ex5/.vscode/launch.json
@@ -21,7 +21,8 @@
             "type": "java",
             "name": "Debug (Launch)-Sort",
             "request": "launch",
-            "mainClass": "Sort"
+            "mainClass": "Sort",
+            "args": "-q"
         }
     ]
 }
