--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - StringMatch",
+            "request": "launch",
+            "mainClass": "StringMatch",
+            "projectName": "Data-Structures-and-Algorithms-Laboratory_40b35511"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - RandomDigraph",
             "request": "launch",
             "mainClass": "RandomDigraph",
